--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,13 @@
+/* Element Stylings */
+
 header {
   background-color: rgba(136, 133, 133, 0.61);
   text-align: center;
   border-bottom: 3px solid black;
   margin-bottom: 5px;
 }
+
+/* Class Stylings */
 
 .search-label {
   font-size: 25px;
@@ -25,6 +29,10 @@ header {
   margin-top: 2px;
 }
 
-.col-2 {
+.my-cute-border{
   border-right: solid 1px black;
+}
+
+.col-12 {
+  max-width: 98.6%;
 }
